fix：视频播放优化